# bfa

./: CMakeLists.txt  README.md
headers/: bv.h
headers/formula/: lexem.h  parsedcalculator.h  parsedformula.h
headers/func/: anf.h  bf.h  bfbase.h  crypto.h  fpolynomial.h  vanf.h  vbf.h  vbfbase.h
headers/gf2/: bpolynomials.h  gf2.h  gf2factory.h  gf2table.h
headers/integer/: rational.h
headers/iter/: cnkiter.h
headers/linear/: gjmatrix.h  linear.h
headers/props/: ddt.h  subspacebfiter.h  walshspectrum.h
headers/props/utils/: cosetstack.h  sortingmap.h
headers/vect/: bv16.h  bv32.h  bv64.h  bv8.h  bvdata.h  bvio.h  chunkvector.h  domain.h  domainmask.h  enum.h  graysequence.h  itermaskproxy.h  iterproxy.h  iterrevproxy.h  linearcombinations.h
sources/: bvio.cpp
sources/formula/: lexem.cpp  parsedformula.cpp
sources/func/: anf.cpp  bf.cpp  bfbase.cpp  crypto.cpp  fpolynomial.cpp  vanf.cpp  vbf.cpp  vbfbase.cpp
sources/gf2/: gf2.cpp  gf2factory.cpp  gf2table.cpp
sources/linear/: gjmatrix.cpp
sources/props/: ddt.cpp  subspacebfiter.cpp  walshspectrum.cpp
sources/vect/: bvio.cpp
tests/: anftest.cpp  booloptest.cpp  chunkvectortest.cpp  cryptotest.cpp  fpolynomialtest.cpp  gf2test.cpp  subspacestest.cpp  vcryptotest.cpp  walshtest.cpp
